--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,11 +4,12 @@
   --cardBg: #ffffff;
   --cardWrpColor: #333333;
   --cardWrpBg: #ffe1cb;
-  --negative: 1;
   @media (prefers-color-scheme: dark) {
     --pageBg: #000000;
     --cardColor: #ffffff;
     --cardBg: #333333;
+    --negative: -1;
+    --cardWrpDim: 20;
   }
 }
 
@@ -26,7 +27,8 @@ body {
 
 body {
   background: var(--pageBg);
-  font-family: var(--quicksand);
+  font-family: var(--quicksand, "Quicksand", serif);
+  font-optical-sizing: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-block: 5rem;
@@ -87,12 +89,11 @@ a {
   gap: 1.875rem;
   color: var(--cardWrpColor);
   background-color: var(--cardWrpBg);
+  background-color: hsl(
+    from var(--cardWrpBg) h s calc(l - var(--cardWrapDim, 0))
+  );
   padding: 1rem;
   border-radius: calc(var(--cardBorderRadius) - var(--cardPadding));
-
-  @media (prefers-color-scheme: dark) {
-    background-color: hsl(from var(--cardWrpBg) h s calc(l - 20));
-  }
 }
 
 .card-head {
@@ -128,11 +129,21 @@ a {
       will-change: scale;
       transition: scale 0.15s ease-in-out;
       scale: 0.8 0;
+    }
+  }
+}
 
-      .bookmarked & {
-        transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 2);
-        scale: 1 1;
-      }
+.card {
+  transition: box-shadow 0.15s ease-in-out, border-color 0.15s ease-in-out;
+  will-change: box-shadow, border-color;
+
+  &.bookmarked {
+    box-shadow: 0 0 0 5px var(--cardWrpBg);
+    border-color: var(--cardWrpBg);
+
+    .card-icon {
+      transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 2);
+      scale: 1 1;
     }
   }
 }
@@ -197,7 +208,7 @@ a {
   }
 
   .card-location {
-    color: hsl(from currentcolor h s calc(l + 30));
+    color: hsl(from currentcolor h s calc(l + 25));
     display: inline-flex;
     align-items: center;
     gap: 0.375rem;
@@ -225,10 +236,6 @@ a {
       background-color: hsl(from var(--cardColor) h s calc(l + 50));
     }
 
-    @media (prefers-color-scheme: dark) {
-      --negative: -1;
-    }
-
     @container (min-width: 580px) {
       justify-content: center;
     }
@@ -244,13 +251,13 @@ a {
   &:focus-visible {
     color: var(--cardBg);
     background-color: hsl(
-      from var(--cardColor) h s calc(l + 10 * var(--negative))
+      from var(--cardColor) h s calc(l + 10 * var(--negative, 1))
     );
   }
 
   &:focus-visible {
     outline: none;
     box-shadow: 0 0 0 0.25rem
-      hsl(from var(--cardColor) h s calc(l + 30 * var(--negative)));
+      hsl(from var(--cardColor) h s calc(l + 30 * var(--negative, 1)));
   }
 }
