--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,263 +1,32 @@
-:root {
-  --pageBg: #f9f9f9;
-  --cardColor: #333333;
-  --cardBg: #ffffff;
-  --cardWrpColor: #333333;
-  --cardWrpBg: #ffe1cb;
-  @media (prefers-color-scheme: dark) {
-    --pageBg: #000000;
-    --cardColor: #ffffff;
-    --cardBg: #333333;
-    --negative: -1;
-    --cardWrpDim: 20;
-  }
-}
+@import "@/css/utilities.css";
+@import "@/css/form.css";
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
-  background: var(--pageBg);
-  font-family: var(--quicksand, "Quicksand", serif);
-  font-optical-sizing: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  padding-block: 5rem;
+    background: var(--pageBg);
+    font-family: var(--quicksand, "Quicksand", serif);
+    font-optical-sizing: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+@media (prefers-color-scheme: dark) {
+    html {
+        color-scheme: dark;
+    }
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.container {
-  display: grid;
-  gap: 1rem;
-  max-width: 1100px;
-  margin-inline: auto;
-
-  @media (min-width: 580px) {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  @media (min-width: 980px) {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  .col {
-    display: flex;
-    container-type: inline-size;
-  }
-}
-
-.card {
-  --cardPadding: 0.625rem;
-  --cardBorderRadius: 1.875rem;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  padding: var(--cardPadding);
-  border-radius: var(--cardBorderRadius);
-  color: var(--cardColor);
-  background-color: var(--cardBg);
-  border: 1px solid hsl(from var(--cardColor) h s calc(l + 70));
-
-  @container (min-width: 580px) {
-    flex-direction: row;
-  }
-}
-
-.card-wrapper {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  gap: 1.875rem;
-  color: var(--cardWrpColor);
-  background-color: var(--cardWrpBg);
-  background-color: hsl(
-    from var(--cardWrpBg) h s calc(l - var(--cardWrapDim, 0))
-  );
-  padding: 1rem;
-  border-radius: calc(var(--cardBorderRadius) - var(--cardPadding));
-}
-
-.card-head {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  order: -1;
-
-  .card-date {
-    display: inline-flex;
-    align-items: center;
-    gap: 0.375rem;
-    font-weight: 600;
-    font-size: small;
-    text-transform: uppercase;
-  }
-
-  .card-bookmark {
-    width: 3rem;
-    aspect-ratio: 1;
-    display: inline-grid;
-    place-items: center;
-    border: none;
-    border-radius: 50%;
-    color: var(--cardColor);
-    background-color: var(--cardBg);
-    font-size: large;
-    cursor: pointer;
-
-    .card-icon {
-      position: absolute;
-      transform-origin: top;
-      will-change: scale;
-      transition: scale 0.15s ease-in-out;
-      scale: 0.8 0;
-    }
-  }
-}
-
-.card {
-  transition: box-shadow 0.15s ease-in-out, border-color 0.15s ease-in-out;
-  will-change: box-shadow, border-color;
-
-  &.bookmarked {
-    box-shadow: 0 0 0 5px var(--cardWrpBg);
-    border-color: var(--cardWrpBg);
-
-    .card-icon {
-      transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 2);
-      scale: 1 1;
-    }
-  }
-}
-
-.card-body {
-  display: grid;
-  align-items: center;
-  justify-content: space-between;
-  grid-template-areas:
-    "a a"
-    "b c";
-  .card-title {
-    font-size: x-large;
-  }
-  .card-subtitle {
-    grid-area: a;
-    font-weight: 600;
-    font-size: small;
-  }
-  .card-image {
-    clip-path: circle(50%);
-    width: 2.5rem;
-    aspect-ratio: 1;
-    object-fit: cover;
-  }
-}
-
-.card-footer {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.625rem;
-  list-style: none;
-
-  .card-tag {
-    border-radius: 0.375rem;
-    padding: 0.125rem 0.375rem;
-    border: 1px solid hsl(from currentcolor h s 60);
-    font-size: small;
-    font-weight: 500;
-  }
-}
-
-.card-info {
-  padding: 1rem;
-  margin-block-start: 0.625rem;
-  display: grid;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.375rem;
-  grid-template-areas:
-    "a c"
-    "b c";
-
-  @container (min-width: 580px) {
-    margin-block-start: 0;
-    min-width: 250px;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      "a"
-      "b"
-      "c";
-  }
-
-  .card-location {
-    color: hsl(from currentcolor h s calc(l + 25));
-    display: inline-flex;
-    align-items: center;
-    gap: 0.375rem;
-  }
-
-  .card-salary {
-    font-size: large;
-    font-weight: 600;
-  }
-
-  .card-details {
-    grid-area: c;
-    font-size: large;
-    font-family: inherit;
-    font-weight: 400;
-    border-radius: calc(var(--cardBorderRadius) - var(--cardPadding));
-    padding-inline: 1rem;
-    height: 2.5rem;
-    display: inline-flex;
-    align-items: center;
-    color: var(--cardBg);
-    background-color: var(--cardColor);
-
-    &.disabled {
-      background-color: hsl(from var(--cardColor) h s calc(l + 50));
-    }
-
-    @container (min-width: 580px) {
-      justify-content: center;
-    }
-  }
-}
-
-.card-button {
-  will-change: color, background-color, box-shadow;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    box-shadow 0.15s ease-in-out;
-
-  &:hover,
-  &:focus-visible {
-    color: var(--cardBg);
-    background-color: hsl(
-      from var(--cardColor) h s calc(l + 10 * var(--negative, 1))
-    );
-  }
-
-  &:focus-visible {
-    outline: none;
-    box-shadow: 0 0 0 0.25rem
-      hsl(from var(--cardColor) h s calc(l + 30 * var(--negative, 1)));
-  }
+    color: inherit;
 }
